sql/src/test/BugDay_2005-11-09_2.9.3/Tests/hang_on_copy_into.SF-1100504.stable.err.Five
stderr of test 'hang_on_copy_into.SF-1100504` in directory 'src/test/BugDay_2005-11-09_2.9.3` itself:


# 13:11:12 >  
# 13:11:12 >  Mtimeout -timeout 180 Mserver "--config=/ufs/niels/scratch/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/Linux-x86_64/lib/bin" --set "gdk_dbfarm=/ufs/niels/scratch/Linux-x86_64/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/niels/scratch/Linux-x86_64/var/MonetDB/log" --set mapi_port=30055 --set sql_port=45907 --set xquery_port=50884 --set monet_prompt= --trace "--dbname=mTests_src_test_BugDay_2005-11-09_2.9.3" --dbinit="module(sql_server); sql_server_start();" ; echo ; echo Over..
# 13:11:12 >  

# builtin opt 	config = ${prefix}/etc/MonetDB.conf
# builtin opt 	gdk_arch = 64bitx86_64-redhat-linux-gnu
# builtin opt 	gdk_version = 4.9.3
# builtin opt 	monet_pid = 16950
# builtin opt 	prefix = /ufs/niels/scratch/Linux-x86_64
# builtin opt 	exec_prefix = ${prefix}
# builtin opt 	gdk_dbname = tst
# builtin opt 	gdk_dbfarm = ${prefix}/var/MonetDB
# builtin opt 	gdk_debug = 8
# builtin opt 	gdk_mem_bigsize = 137438953472
# builtin opt 	gdk_vm_minsize = 137438953472
# builtin opt 	gdk_alloc_map = no
# builtin opt 	monet_admin = adm
# builtin opt 	monet_prompt = >
# builtin opt 	monet_welcome = yes
# builtin opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# builtin opt 	monet_daemon = yes
# builtin opt 	host = localhost
# builtin opt 	mapi_port = 50000
# builtin opt 	mapi_noheaders = no
# builtin opt 	mapi_debug = 0
# builtin opt 	mapi_clients = 2
# builtin opt 	sql_port = 45123
# builtin opt 	sql_debug = 0
# builtin opt 	sql_user = monetdb
# builtin opt 	sql_schema = sys
# builtin opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	prefix = /ufs/niels/scratch/Linux-x86_64
# config opt 	exec_prefix = ${prefix}
# config opt 	gdk_dbfarm = ${prefix}/var/MonetDB/dbfarm
# config opt 	gdk_dbname = demo
# config opt 	gdk_alloc_map = no
# config opt 	gdk_embedded = no
# config opt 	gdk_debug = 0
# config opt 	monet_admin = adm
# config opt 	monet_prompt = MonetDB>
# config opt 	monet_welcome = yes
# config opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# config opt 	monet_daemon = no
# config opt 	mapi_port = 50000
# config opt 	mapi_debug = 0
# config opt 	sql_port = 45123
# config opt 	sql_debug = 0
# config opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	xquery_port = 45789
# config opt 	pf_httpd_port = 8080
# config opt 	xquery_output = dm
# config opt 	xquery_cacheMB = 100
# cmdline opt 	config = /ufs/niels/scratch/Linux-x86_64/etc/MonetDB.conf
# cmdline opt 	gdk_debug = 10
# cmdline opt 	monet_mod_path = /ufs/niels/scratch/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/Linux-x86_64/lib/bin
# cmdline opt 	gdk_dbfarm = /ufs/niels/scratch/Linux-x86_64/var/MonetDB/dbfarm
# cmdline opt 	sql_logdir = /ufs/niels/scratch/Linux-x86_64/var/MonetDB/log
# cmdline opt 	mapi_port = 30055
# cmdline opt 	sql_port = 45907
# cmdline opt 	xquery_port = 50884
# cmdline opt 	monet_prompt = 
# cmdline opt 	gdk_dbname = mTests_src_test_BugDay_2005-11-09_2.9.3

# 13:11:12 >  
# 13:11:12 >  Mtimeout -timeout 60 MapiClient -lsql -u monetdb -P monetdb --host=localhost --port=45907  < hang_on_copy_into.SF-1100504.sql
# 13:11:12 >  

MAPI  = monetdb@localhost:30145
QUERY = COPY 1 RECORDS INTO "news" FROM stdin USING DELIMITERS '\t';
ERROR = !SQLException:importTable:failed to import table
        !ERROR: End of string (') missing in 'dwerg.net word volwassen, er is eindelijk content at line 1
MAPI  = monetdb@localhost:30145
QUERY = en het voicemail archief begint al aardig vol te lopen.
ERROR = !syntax error, unexpected IDENT in: "en"


# 13:11:12 >  
# 13:11:12 >  Done.
# 13:11:12 >  

